email ticket functionality

--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "description": "Tryna cop some Megabus deals",
   "main": "index.js",
   "dependencies": {
+    "moment": "^2.18.1",
+    "nodemailer": "^4.0.1",
     "request": "^2.81.0",
     "request-promise": "^4.2.1"
   },
