--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "body-parser": "^1.17.2",
     "express": "^4.15.3",
     "moment": "^2.18.1",
+    "mongodb": "^2.2.31",
     "mongoose": "^4.11.5",
     "morgan": "^1.8.2",
     "nodemailer": "^4.0.1",
