--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "dependencies": {
     "body-parser": "^1.17.2",
+    "colors": "^1.1.2",
     "express": "^4.15.3",
     "moment": "^2.18.1",
     "mongodb": "^2.2.31",
