--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "mocha": "^4.0.1"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "./node_modules/mocha/bin/mocha test",
     "inspect": "nodemon --inspect --debug-brk index.js"
   },
   "repository": {
