--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "body-parser": "^1.17.2",
     "colors": "^1.1.2",
     "express": "^4.15.3",
+    "firebase-admin": "^5.4.3",
     "moment": "^2.18.1",
     "mongodb": "^2.2.31",
     "mongoose": "^4.11.5",
