--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "body-parser": "^1.17.2",
     "colors": "^1.1.2",
+    "dotenv": "^4.0.0",
     "express": "^4.15.3",
     "firebase-admin": "^5.4.3",
     "moment": "^2.18.1",
