--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "dotenv": "^4.0.0",
     "express": "^4.15.3",
     "firebase-admin": "^5.4.3",
+    "handlebars": "^4.0.11",
     "moment": "^2.18.1",
     "mongodb": "^2.2.31",
     "mongoose": "^4.11.5",
