--- a/package.json
+++ b/package.json
@@ -8,15 +8,16 @@
     "colors": "^1.2.4",
     "dotenv": "^4.0.0",
     "express": "^4.16.3",
-    "firebase-admin": "^5.12.0",
+    "firebase-admin": "^6.4.0",
     "handlebars": "^4.0.11",
     "moment": "^2.22.1",
     "mongodb": "^2.2.35",
     "mongoose": "^4.13.12",
-    "morgan": "^1.9.0",
+    "morgan": "^1.9.1",
     "nodemailer": "^4.6.4",
-    "request": "^2.85.0",
-    "request-promise": "^4.2.2"
+    "request": "^2.88.0",
+    "request-promise": "^4.2.2",
+    "socket.io": "^2.2.0"
   },
   "devDependencies": {
     "chai": "^4.1.2",
